# projNUm1

./: AStar.h  BFS.h  BestFirsrtSearche.h  BestFirstSearch.h  Bfs.cpp  Bfs.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Matrix.cpp  Matrix.h  MatrixSolver.cpp  MatrixSolver.h  MyClientHandler.cpp  MyClientHandler.h  MyMain.h  MyParallerServer.cpp  MyParallerServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Problem.h  Searchable.h  Searcher.h  Server.h  Solution.cpp  Solution.h  Solver.h  State.cpp  State.h  StringReverse.cpp  StringReverse.h  main.cpp
